# usb-descriptor-parser

./: Cargo.toml
src/: lib.rs  logger.rs  uac_proto.rs  usb_proto.rs  uvc_proto.rs
test/fixtures/: 046d_0866_meetup_config_desc_0.txt  046d_0866_meetup_config_desc_0_720p.txt  046d_0866_meetup_config_desc_0_no_60hz.txt  0x0018_0x25c1_HuddleSHOT_config_desc_0.txt  0x0018_0x25c1_HuddleSHOT_config_desc_0_no_uac.txt  0x0204_0x2e43_33_Meeting_Owl_Pro_config_desc_0.txt  0x046d_0x085b_7_Logitech_Webcam_C925e_config_desc_0.txt  0x0866_0x046d_12_Logitech_MeetUp_config_desc_0.txt  0x0867_0x046d_MeetUp_Speakerphone_config_desc_0.txt  0x0867_0x046d_MeetUp_Speakerphone_config_desc_0_no_uac.txt  0x0892_0x046d_31_HD_Pro_Webcam_C920_config_desc_0.txt  0x0892_0x046d_31_HD_Pro_Webcam_C920_config_desc_0_removed.txt  0x0b0e_0x3013_Jabra_PanaCast_50_config_desc_0_high_res.txt  0x2070_0x1908_7_USB2.0_Device_config_desc_0.txt  0x2bd9_0x0021_7_Huddly_IQ_config_desc_0.txt  0x4030_0x0499_8_Yamaha_CS-700_config_desc_0.txt  0x4032_0x0499_6_CS-700_Video_config_desc_0.txt  0x4444_0x1234_20_JOUNIVO_JV601_config_desc_0.txt  0x48a8_0x0bda_realtek_dac_config_desc_0.txt  0x9275_0x095d_7_Poly_Studio_X30_config_desc_0.txt  0xa213_0x05a7_114_Bose_Videobar_VB1_config_desc_0.txt  0xa213_0x05a7_114_Bose_Videobar_VB1_config_desc_0_no_h264.txt  0xa213_0x05a7_116_Bose_Videobar_VB1_config_desc_0.txt  13d3_56d5_razer_integrated_config_desc_0.txt
