[package]
name = "usb-desc-parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
num = "0.2"
num-derive = "0.3"
num-traits = "0.2"
structure = "0.1"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
pretty_env_logger = "0.4.0"
anyhow = "1.0"
libusb1-sys = { version = "0.6.0", features = ["vendored"] }
float_eq = "0.6.0"
